update ReleaseNote for the new branch
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WSF/trunk@4946 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,4 +1,11 @@
 ------------------------------------------------------------------------------
+ooooooooooooooooooooooooooo  WSF Version 1.12  ooooooooooooooooooooooooooooooo
+------------------------------------------------------------------------------
+
+Summary: bug fixes.
+
+
+------------------------------------------------------------------------------
 ooooooooooooooooooooooooooo  WSF Version 1.11  ooooooooooooooooooooooooooooooo
 ------------------------------------------------------------------------------
 
