update release note for version 1.12
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WSF/branches/WDK_version_1-12@5167 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -2,7 +2,8 @@
 ooooooooooooooooooooooooooo  WSF Version 1.12  ooooooooooooooooooooooooooooooo
 ------------------------------------------------------------------------------
 
-Summary: bug fixes.
+Summary: Add support to optional extra messages returned from WSF compatible
+         plugins. Some minor bug fixes
 
 
 ------------------------------------------------------------------------------
