--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,4 +1,12 @@
 ------------------------------------------------------------------------------
+ooooooooooooooooooooooooooo  WSF Version 1.20  ooooooooooooooooooooooooooooooo
+------------------------------------------------------------------------------
+
+A synchronsized release with WDK. no changes.
+
+
+
+------------------------------------------------------------------------------
 ooooooooooooooooooooooooooo  WSF Version 1.17  ooooooooooooooooooooooooooooooo
 ------------------------------------------------------------------------------
 
