--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,4 +1,9 @@
 ------------------------------------------------------------------------------
+ooooooooooooooooooooooooooo  WSF Version 1.27  ooooooooooooooooooooooooooooooo
+------------------------------------------------------------------------------
+
+
+------------------------------------------------------------------------------
 ooooooooooooooooooooooooooo  WSF Version 1.20  ooooooooooooooooooooooooooooooo
 ------------------------------------------------------------------------------
 
