reintegrated from spanlogic branch
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WSF/trunk@9100 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,4 +1,9 @@
 ------------------------------------------------------------------------------
+ooooooooooooooooooooooooooo  WSF Version 1.28  ooooooooooooooooooooooooooooooo
+------------------------------------------------------------------------------
+
+
+------------------------------------------------------------------------------
 ooooooooooooooooooooooooooo  WSF Version 1.27  ooooooooooooooooooooooooooooooo
 ------------------------------------------------------------------------------
 
